Horizontal scroll fix

--- a/src/css/style.less
+++ b/src/css/style.less
@@ -55,12 +55,9 @@
 
 body {
 	background: url('../img/bg.jpg') center top no-repeat, url('../img/bg.png');
-	overflow-x: hidden;
 }
 
-
-.pagetrimmer {
-	width: 100%;
+html {
 	overflow-x: hidden;
 }
 
